# minesweeper-dbus

./: .gitignore  CMakeLists.txt  README.md  fidl-gen
fidl/: minesweeper.fidl
src/: minesweeperService.cpp  minesweeperStubImpl.cpp  minesweeperStubImpl.hpp
src-gen/v1/commonapi/: minesweeper.hpp  minesweeperDBusDeployment.cpp  minesweeperDBusDeployment.hpp  minesweeperDBusProxy.cpp  minesweeperDBusProxy.hpp  minesweeperDBusStubAdapter.cpp  minesweeperDBusStubAdapter.hpp  minesweeperProxy.hpp  minesweeperProxyBase.hpp  minesweeperStub.hpp  minesweeperStubDefault.hpp
